[tool.poetry]
name = "devpost-api"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
flask = "^1.1"
gunicorn = "^19.9"
flask-cors = "^3.0"
beautifulsoup4 = "^4.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
